@@ -1,3 +1,8 @@
+2005-08-02  Mark Grondona <mgrondona@llnl.gov>
+
+	* src/pdsh/dsh.c, src/pdsh/pcp_server.c : Remove debug code for pdcp 
+	  which was accidentally committed.
+
 2005-07-21  Mark Grondona <mgrondona@llnl.gov>
 
 	* src/common/hostlist.c, src/common/hostlist.h : Update hostlist code
